[package]
name = "mdbrowser"
version = "0.1.0"
authors = ["Yao Zongyou <yaozongyou@vip.qq.com>"]
edition = "2018"
description = "A small tool for browsing markdown files."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
gettid = "0.1.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
