[package]
name = "mdbrowser"
version = "0.1.0"
authors = ["Yao Zongyou <yaozongyou@vip.qq.com>"]
edition = "2018"
description = "A small tool for browsing markdown files."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"